fixing more spacing

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -70,7 +70,7 @@ header .container{
     width: 49%;
     text-align: right;
     color: #777777;
-    font-weight: normal;
+    font-weight: bolder;
    
 }
  
